setup search component

--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,10 +1,11 @@
 <div>
-  <form>
+  <form (ngSubmit)="onUseCityToGetWeatherData()">
     <input
-      type="search"
+      type="text"
       id="places"
       #places
       class="input w-full shadow-md mx-2"
+      formControlName="city"
     />
   </form>
 </div>
