--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<app-search (searchEmitted)="getCurrentWeather($event)"></app-search>
+<div class="w-full p-10 md:px-12 md:py-6 bg-blue-200 h-full">
+  <app-search (searchEmitted)="getCurrentWeather($event)"></app-search>
+  <div *ngIf="currentWeather">
+    <app-weather-card [currentWeather]="currentWeather"></app-weather-card>
+  </div>
+</div>
