--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="w-full p-10 md:px-12 md:py-6 bg-blue-200 h-full">
+<div class="p-2 md:p-40 relative">
   <app-search (searchEmitted)="getCurrentWeather($event)"></app-search>
   <div *ngIf="currentWeather">
     <app-weather-card [currentWeather]="currentWeather"></app-weather-card>
