--- a/src/app/weather-card/weather-card.component.html
+++ b/src/app/weather-card/weather-card.component.html
@@ -1,8 +1,66 @@
-<div>
-  <div>{{ currentWeather?.current?.temp }}</div>
-  <div>
-    <button class="btn primary" (click)="showMore()">
-      {{ viewingMore ? "Less" : "More" }}
-    </button>
+<div class="card w-full drop-shadow-xl my-4 p-2">
+  <div class="flex flex-col justify-center items-center text-center">
+    <!-- <h1 class="card-title capitalize"> -->
+    <!-- Location (ie. Brussels, Belgium) -->
+    <!-- {{ searchCountry.city }}, {{ searchCountry.country }} -->
+    <!-- </h1> -->
+
+    <figure>
+      <img [src]="weatherIcon" alt="" />
+    </figure>
+    <!-- Current temperature -->
+    <div class="text-5xl text-gray-700">
+      {{ currentWeather?.current?.temp }}º
+    </div>
+    <!-- Current weather description (ie. raining) -->
+    <h2 class="text-sm capitalize">{{ weather.description }}</h2>
+
+    <div class="">
+      <!-- Today's low temperature -->
+      <span class="text-xs mx-1">L:</span>
+      <!-- <span class="text-sm">{{ highAndLowCurrent.min }}º</span> -->
+      <!-- today's high temperature -->
+      <span class="text-xs mx-1">H:</span>
+      <!-- <span class="text-sm">{{ highAndLowCurrent.max }}º</span> -->
+    </div>
+    <div>
+      <button
+        class="rounded-full bg-teal-500 text-white p-2 shadow-sm hover:bg-teal-600 text-xs"
+        (click)="showMore()"
+        data-testid="showMoreButton"
+      >
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="h-6 w-6"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
+          stroke-width="2"
+          *ngIf="!viewingMore"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M19 9l-7 7-7-7"
+          />
+        </svg>
+
+        <svg
+          *ngIf="viewingMore"
+          xmlns="http://www.w3.org/2000/svg"
+          class="h-6 w-6"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
+          stroke-width="2"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M5 15l7-7 7 7"
+          />
+        </svg>
+      </button>
+    </div>
   </div>
 </div>
