--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,18 +1,31 @@
-/* You can add global styles to this file, and also import other style files */
-$primary-color: #6993b8;
-$hover-color: #456f93;
-$default-color: #f0f4f8;
-$base-color: white;
-$base-space: 0.25rem;
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap");
 
-.btn {
-  padding: $base-space calc($base-space * 2);
-  margin: $base-space;
-  border-radius: 10%;
-  border: 0;
+/* You can add global styles to this file, and also import other style files */
+body {
+  font-family: "Inter", sans-serif;
+}
+html {
+  @apply bg-gradient-to-r from-cyan-500 to-blue-50;
+  color: #191d24;
 }
 
-.primary {
-  background-color: $primary-color;
-  color: $base-color;
+.slide-enter-active {
+  animation: Slide 0.3s ease;
+}
+.slide-leave-active {
+  animation: Slide 0.3s ease reverse;
+}
+
+@keyframes Slide {
+  from {
+    transform: translateX(100px);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
 }
